--- a/server/static/style.css
+++ b/server/static/style.css
@@ -1,13 +1,22 @@
+:root {
+    --white: #fff;
+    --bg: #f8f8f8;
+    --teal-blue: #21444c;
+    --light-blue: #b0cecd;
+
+    --border: #ddd;
+}
+
 html {
-    background-color: #b0cecd;
+    background-color: var(--light-blue);
 }
 body {
     margin: 0;
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 2fr 1fr;
     grid-template-rows: 100px 1fr;
     min-height: 100vh;
-    background-color: #f0f0f0;
+    background-color: var(--bg);
 }
 
 header {
@@ -17,7 +26,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    background-color: #f0f0f0;
+    background-color: var(--bg);
 }
 
 header img {
@@ -29,7 +38,7 @@ header img {
 #code-frame {
     grid-column: 1 / 2;
     grid-row: 2;
-    margin: 0px 5px 0 20px;
+    margin: 0px 10px 20px 20px;
 }
 
 
@@ -38,7 +47,7 @@ header img {
     grid-row: 2;
     align-items: stretch;
     justify-content: center;
-    margin: 0px 20px 0 5px;
+    margin: 0px 20px 20px 10px;
 }
 
 #output {
@@ -53,25 +62,59 @@ header img {
     padding: 5px 0;
 }
 
+footer {
+    display: flex;
+    justify-content: space-evenly;
+    grid-column: 1 / span 2;
+
+    background-color: var(--light-blue);
+
+}
+
 #code-frame .CodeMirror {
     height: 100%;
     overflow: auto;
+    resize: none;
+
+    font-size: larger;
 }
 
 .CodeMirror-gutters {
-    background-color: #f0f0f0;
+    background-color: var(--bg);
 }
 
 .frame-header {
     display: flex;
     flex-direction: row;
-    border: 1px solid #ddd;
-    background-color: #b0cecd;
-    color: #21444c;
+    justify-content: space-between;
+
+    border: 1px solid var(--border);
+    background-color: var(--light-blue);
+    color: var(--teal);
 }
 
 .frame {
-    border: 1px solid #ddd;
+    border: 1px solid var(--border);
     display: flex;
     flex-direction: column;
+
+    background-color: var(--white);
+}
+
+.frame-header h2 {
+    display: inline;
+    margin: 5px;
+
+    color: var(--teal-blue);
+    font-weight: normal;
+}
+
+.frame-header button {
+    margin: 5px;
+
+    background-color: var(--white);
+    color: var(--teal-blue);
+    border-color: var(--teal-blue);
+    border-radius: 3px;
+
 }
