edit folder structure

--- a/static/style/base.css
+++ b/static/style/base.css
@@ -20,7 +20,7 @@ body {
 }
 
 html {
-    background-color: var(--light-blue);
+    background-color: var(--teal-blue);
 }
 
 header {
@@ -32,6 +32,23 @@ header {
     background-color: var(--bg);
 }
 
+header nav {
+    margin-right: 20px;
+}
+
+header nav ul {
+    list-style: none;
+}
+
+header nav ul li{
+    display: inline;
+    margin-left: 10px;
+}
+
+header nav ul li h3{
+    display: inline;
+}
+
 header img {
     height: 60px;
     margin: 0 0 25px 25px;
@@ -41,5 +58,6 @@ footer {
     display: flex;
     justify-content: space-evenly;
     
-    background-color: var(--light-blue);
+    color: var(--white);
+    background-color: var(--teal-blue);
 }
