--- a/static/style/editor.css
+++ b/static/style/editor.css
@@ -20,6 +20,7 @@ main {
 #output #input{
     padding: 10px;
 }
+
 #input{
     border: none;
     outline: none;
@@ -30,8 +31,7 @@ main {
 }
 
 #output p {
-    margin: 0;
-    padding: 5px 0;
+    margin: 5px;
 }
 
 .frame {
