add documentation and landing page

--- a/static/style/editor.css
+++ b/static/style/editor.css
@@ -73,11 +73,14 @@ main {
 
     background-color: var(--white);
     color: var(--teal-blue);
-    border-color: var(--border);
-    border-style:outset;
-    border-radius: 3px;
+    border: 1px solid var(--border);
+    border-radius: 5px;
+}
+
+.frame-header button:hover, .frame-header button:active {
+    border-color: var(--teal-blur);
 }
 
 .frame-header button:active {
-    border-style:inset;
+    border-style: inset;
 }
