--- a/static/style/base.css
+++ b/static/style/base.css
@@ -23,6 +23,11 @@ html {
     background-color: var(--teal-blue);
 }
 
+main {
+    background-color: var(--bg);
+}
+
+
 header {
     height: 100px;
     display: flex;
@@ -32,21 +37,36 @@ header {
     background-color: var(--bg);
 }
 
-header nav {
+header ul {
     margin-right: 20px;
 }
 
-header nav ul {
+header ul {
     list-style: none;
 }
 
-header nav ul li{
+header ul li{
     display: inline;
     margin-left: 10px;
+    font-size: larger;
 }
 
-header nav ul li h3{
+header ul li label, header ul li a{
     display: inline;
+    color: var(--teal-blue);
+    background-color:var(--white);
+    text-decoration: none;
+    cursor: pointer;
+    
+    padding: 5px;
+    border: 1px solid var(--teal-blue);
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    
+}
+
+header ul li label:hover, header ul li a:hover{
+    background-color: var(--light-blue);
 }
 
 header img {
