--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base.jinja2' %}
 
 {% block title %}
   Editor
 {% endblock %}
 
-{% block head_script %}
+{% block tmpl_head_script %}
   <!-- socket.io -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
   <script src="{{ url_for('static', filename='scripts/communicate.js') }}"></script>
@@ -14,24 +14,25 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/codemirror.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/addon/mode/simple.min.js"></script>
   
-  <!-- local -->
+  <!-- editor.css -->
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/editor.css') }}">
-  <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
 {% endblock %}
 
-{% block nav %}
+{% block menu %}
+  <li><a href=" {{ url_for('routes.documentation') }}">Continue Learning</a></li>
+
   <li>
-    <button id="export" onclick="downloadFile()" style="display: none;">Export</button>
-    <h3><label for="export">Export</label></h3>
+    <button id="export" onclick="downloadFile()" style="display: none;"></button>
+    <label for="export">Export File</label>
   </li>
 
   <li>
     <input type="file" id="import" accept=".brz" onchange="openFile(event)" style="display: none;"/>
-    <h3><label for="import">Import</label></h3>
+    <label for="import">Import File</label>
   </li>
 {% endblock %}
   
-{% block content %}
+{% block tmpl_content %}
   <div id="code-frame" class="frame">
     <div class="frame-header">
       <h2>Source Code</h2>
