--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block menu %}
-  <li><a href=" {{ url_for('routes.editor') }}">Start Coding</a></li>
+  <li><a href=" {{ url_for('routes.editor') }}"><i class="fa-solid fa-laptop-code fa-xl"></i></a></li>
 {% endblock %}
 
 
