--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -10,6 +10,9 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/base.css') }}">
   {% block tmpl_head_script %}{% endblock %}
 
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/5ccbd62035.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -31,7 +34,7 @@
   <footer>
     <p>Written by Idan Pelled</p>
     <p>GitHub</p>
-    <p>All Rights reserved</p>
+    <p>&copy; All rights reserved</p>
   </footer>
 
   {% block body_script %}{% endblock %}
