--- a/templates/editor.html
+++ b/templates/editor.html
@@ -19,24 +19,33 @@
 {% endblock %}
 
 {% block menu %}
-  <li><a href=" {{ url_for('routes.documentation') }}">Continue Learning</a></li>
-
   <li>
     <button id="export" onclick="downloadFile()" style="display: none;"></button>
-    <label for="export">Export File</label>
+    <label for="export" title="Export File"><i class="fa-solid fa-download fa-xl"></i></label>
   </li>
 
   <li>
     <input type="file" id="import" accept=".brz" onchange="openFile(event)" style="display: none;"/>
-    <label for="import">Import File</label>
+    <label for="import"><i class="fa-solid fa-upload fa-xl"></i></label>
   </li>
+
+  <li><a href=" {{ url_for('routes.documentation') }}"><i class="fa-solid fa-book fa-xl"></i></a></li>
+
 {% endblock %}
   
 {% block tmpl_content %}
   <div id="code-frame" class="frame">
     <div class="frame-header">
       <h2>Source Code</h2>
-      <button onclick="SendCode()">Run</button>
+      <div>
+        <i id="loading" class="fa-solid fa-spinner fa-spin" style="display: none;"></i>
+        <button id="run" onclick="SendCode()">
+          <i class="fa-solid fa-play fa-lg"></i>
+        </button>
+        <button id="stop" onclick="Stop()" disabled>
+          <i class="fa-solid fa-stop fa-lg"></i>
+        </button>
+      </div>
     </div>
     <textarea id="code" class="codemirror-textarea" style="display: none;"></textarea>
   </div>
@@ -44,7 +53,11 @@
   <div id="terminal-frame" class="frame">
     <div class="frame-header">
       <h2>Terminal</h2>
-      <button onclick="ClearOutput()">Clear</button>
+      <div>
+        <button onclick="ClearOutput()">
+          <i class="fa-solid fa-broom fa-lg"></i>
+        </button>
+      </div>
     </div>
     <div id="output"></div>
     <div id="input-frame" style="display: none;">
