--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 
 
 {% block menu %}
-  <li><a href=" {{ url_for('routes.documentation') }}"><i class="fa-solid fa-book fa-xl"></i></a></li>
-  <li><a href=" {{ url_for('routes.editor') }}"><i class="fa-solid fa-laptop-code fa-xl"></i></a></li>
+  <li><a href=" {{ url_for('routes.documentation') }}"><i class="fa-regular fa-file-lines fa-xl"></i></i></a></li>
+  <li><a href=" {{ url_for('routes.editor') }}"><i class="fa-regular fa-pen-to-square fa-xl"></i></a></li>
 {% endblock %}
 
 
