add color to output

--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -33,7 +33,7 @@
 
   <footer>
     <p>Written by Idan Pelled</p>
-    <p>GitHub</p>
+    <p><a href="https://github.com/IdanPelled/breeze" target="_blank">GitHub</a></p>
     <p>&copy; All rights reserved</p>
   </footer>
 
