--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,8 +1,6 @@
 {% extends 'base.jinja2' %}
 
-{% block title %}
-  Editor
-{% endblock %}
+{% block title %}Editor{% endblock %}
 
 {% block tmpl_head_script %}
   <!-- socket.io -->
