--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'static_page.jinja2' %}
 
 
-{% block title %}Breeze - Welcome{% endblock %}
+{% block title %}Welcome{% endblock %}
 
 
 {% block menu %}
