--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Breeze {% block title %}{% endblock %}</title>
+  <title>Breeze - {% block title %}{% endblock %}</title>
   
   <!--page icon -->
   <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
