--- a/static/style/editor.css
+++ b/static/style/editor.css
@@ -2,9 +2,7 @@ main {
     display: flex;
     flex-direction: row;
     background-color: var(--bg);
-    height: 100%;
-    max-height: 100%;
-    overflow: scroll;
+    min-height: 90vh;
 }
 
 #code-frame {
@@ -40,16 +38,19 @@ main {
     margin: 5px;
 }
 
+#output {
+    overflow: scroll;
+}
+
 .frame {
-    height: 95%;
+    height: 80vh;
     border: 1px solid var(--border);
     background-color: var(--white);
-    overflow: scroll;
 }
 
 #code-frame .CodeMirror {
     font-size: larger;
-    height: 100%;
+    height:74.7vh;
 }
 
 .CodeMirror-gutters {
@@ -57,6 +58,8 @@ main {
 }
 
 .frame-header {
+    height: 5vh;
+    min-height: 25px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
