--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,11 @@
 
 
 {% block nav %}
-  <li><a href="#syntax">Learn Coding with Simple Syntax</a></li>
-  <li><a href="#playground">Unleash your Creativity</a></li>
-  <li><a href="#interface">Engaging and Interactive Learning</a></li>
-  <li><a href="#benefits">Early Coding Education</a></li>
-  <li><a href="#start-coding">Start Your Coding Adventure</a></li>
+  <li><a href="#syntax">Simplified Syntax for Easy Learning</a></li>
+  <li><a href="#playground">A Playground for Young Coders</a></li>
+  <li><a href="#interface">Interactive Interface for All Ages</a></li>
+  <li><a href="#benefits">The Value of Coding at a Young Age</a></li>
+  <li><a href="#start-coding">Start Coding</a></li>
 {% endblock %}
 
 
@@ -44,7 +44,7 @@
   </section>
 
   <section>
-    <h2 id="benefits">The Added Value of Starting Coding at a Young Age</h2>
+    <h2 id="benefits">The Value of Starting Coding at a Young Age</h2>
     <p>Introducing coding to children at a young age offers numerous benefits that extend far beyond the realm of programming. Here's why it's essential to set sail into the world of coding with Breeze:</p>
     <ol>
       <li><strong>Problem-Solving Skills:</strong> Coding teaches children how to think logically and break down complex problems into smaller, manageable steps.</li>
