--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -310,13 +310,6 @@ out("Your updated score is: " + score) // Output the updated value
 </section>
 
 <section>
-  <h2 id="legal-information">Legal Information</h2>
-  <p>
-    This project is intended for educational purposes only. It is not meant to be used in production or commercial environments. The creator of this project assumes no responsibility or liability for any damages, losses, or consequences arising from the use or misuse of the project. Users are advised to exercise caution and use the project at their own risk.
-  </p>
-</section>
-
-<section>
   <h2 id="installation">Installation and Setup</h2>
 
 
@@ -351,7 +344,7 @@ out("Your updated score is: " + score) // Output the updated value
       Build the source file
     </li>
     <li>
-      Once the build process is complete, you will have the Breeze executable or interpreter generated.
+      Once the build process is complete, you will have the Breeze executable generated.
     </li>
     <li>
       You can then run Breeze by executing the generated binary file from the command line or terminal, providing it with the necessary code as input.
@@ -360,6 +353,12 @@ out("Your updated score is: " + score) // Output the updated value
   
 </section>
 
+<section>
+  <h2 id="legal-information">Legal Information</h2>
+  <p>
+    This project is intended for educational purposes only. It is not meant to be used in production or commercial environments. The creator of this project assumes no responsibility or liability for any damages, losses, or consequences arising from the use or misuse of the project. Users are advised to exercise caution and use the project at their own risk.
+  </p>
+</section>
 
 {% endblock %}
 
